--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,6 @@ fabricApi {
 }
 
 dependencies {
-	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
@@ -30,6 +29,7 @@ dependencies {
 	modImplementation ("eu.pb4:polymer-core:[${polymer_version}]")
 	modImplementation ("eu.pb4:polymer-blocks:[${polymer_version}]")
 	modImplementation ("eu.pb4:polymer-resource-pack:[${polymer_version}]")
+	modImplementation ("eu.pb4:polymer-resource-pack-extras:[${polymer_version}]")
 	modImplementation ("eu.pb4:polymer-virtual-entity:[${polymer_version}]")
 	modImplementation ("eu.pb4:polymer-autohost:${polymer_version}")
 	modImplementation include ("eu.pb4:factorytools:[${factorytools_version}]")
